--- a/pom.xml
+++ b/pom.xml
@@ -9,16 +9,20 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <kotlin.version>1.7.0</kotlin.version>
+        <kotlin.version>1.6.10</kotlin.version>
         <target-java.version>11</target-java.version>
 
         <spring.version>5.3.21</spring.version>
         <spring-boot.version>2.7.0</spring-boot.version>
+        <spring-data.version>2.7.0</spring-data.version>
+
         <javax-annotations.version>1.3.1</javax-annotations.version>
         <gson.version>2.9.0</gson.version>
         <junit.version>5.8.2</junit.version>
         <slf4j.version>1.7.36</slf4j.version>
         <logback.version>1.2.11</logback.version>
+        <hibernate.version>1.0.2.Final</hibernate.version>
+        <mysql-connector.version>8.0.22</mysql-connector.version>
 
         <failsafe.version>3.0.0-M7</failsafe.version>
         <surefire.version>3.0.0-M7</surefire.version>
@@ -60,7 +64,23 @@
                 </executions>
                 <configuration>
                     <jvmTarget>${target-java.version}</jvmTarget>
+                    <compilerPlugins>
+                        <plugin>jpa</plugin>
+                        <plugin>spring</plugin>
+                    </compilerPlugins>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.jetbrains.kotlin</groupId>
+                        <artifactId>kotlin-maven-noarg</artifactId>
+                        <version>${kotlin.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.jetbrains.kotlin</groupId>
+                        <artifactId>kotlin-maven-allopen</artifactId>
+                        <version>${kotlin.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
 
             <plugin>
@@ -107,9 +127,7 @@
                 <version>${spring-boot.version}</version>
                 <configuration>
                     <arguments>
-                        <argument>
-                            --providers.source=file:conf/providers.example.json
-                        </argument>
+                        <argument>--spring.config.location=file:conf/example.application.properties</argument>
                     </arguments>
                 </configuration>
             </plugin>
@@ -158,6 +176,11 @@
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>${spring-boot.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-jpa</artifactId>
+                <version>${spring-data.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>javax.annotation</groupId>
@@ -178,6 +201,17 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <version>${logback.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.hibernate.javax.persistence</groupId>
+                <artifactId>hibernate-jpa-2.1-api</artifactId>
+                <version>${hibernate.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql-connector.version}</version>
             </dependency>
 
             <dependency>
@@ -202,6 +236,14 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -238,6 +280,16 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
 
