--- a/conf/example.application.properties
+++ b/conf/example.application.properties
@@ -1,3 +1,11 @@
+spring.http.converters.preferred-json-mapper=gson
+
 spring.datasource.url=jdbc:mysql://localhost/golf
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=dev
+spring.datasource.username=dev-pwd
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 providers.source=file:conf/providers.example.json
