--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
         <mysql-connector.version>8.0.29</mysql-connector.version>
         <testcontainers.version>1.17.2</testcontainers.version>
         <mockito.version>4.6.1</mockito.version>
+        <jakarta-xml-bind.version>2.3.2</jakarta-xml-bind.version>
+        <glassfish-jaxb.version>4.0.0</glassfish-jaxb.version>
 
         <failsafe.version>3.0.0-M7</failsafe.version>
         <surefire.version>3.0.0-M7</surefire.version>
@@ -129,6 +131,8 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
                 <configuration>
+                    <mainClass>com.venikkin.example.golftmts.Bootstrap</mainClass>
+                    <classifier>app</classifier>
                     <arguments>
                         <argument>--spring.config.location=file:conf/example.application.properties</argument>
                     </arguments>
@@ -138,10 +142,6 @@
                         <goals>
                             <goal>repackage</goal>
                         </goals>
-                        <configuration>
-                            <mainClass>com.venikkin.example.golftmts.Bootstrap</mainClass>
-                            <classifier>app</classifier>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -225,6 +225,16 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <version>${logback.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>jakarta.xml.bind</groupId>
+                <artifactId>jakarta.xml.bind-api</artifactId>
+                <version>${jakarta-xml-bind.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.jaxb</groupId>
+                <artifactId>jaxb-runtime</artifactId>
+                <version>${glassfish-jaxb.version}</version>
             </dependency>
 
             <dependency>
@@ -368,6 +378,15 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
             <scope>runtime</scope>
         </dependency>
 
